create page skeleton with images

--- a/public/members.html
+++ b/public/members.html
@@ -48,7 +48,7 @@
           <div class="bookinfo">
             <div class="booktitle">The Old Man and the Sea</div>
             <div class="bookheadline">"Worst Book...Ever!"</div>
-            <div class="bookrating">2 Liked 5 Disliked</div>
+            <div class="bookrating">2 Liked 5 Disliked</div>git 
             </div>
           <div class="text preview1">Caption Text</div>
         </div>
