--- a/public/create.html
+++ b/public/create.html
@@ -9,7 +9,29 @@
     <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
+<style>
+    html {
+  background-image: url(../public/images/booksbackground1.jpg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: max-content;
+  position: relative;
+}
+.filloutform {
+    background-image: url(../public/images/booksbackground1.jpg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+</style>
+
 <body>
+    <div class="filloutform">
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -44,22 +66,23 @@
             <ul>
              <li>
                <label for="title">Title:</label>
-               <input type="text" id="title" name="user_name">
+               <input type="text" style="width: 100%;"id="title">
              </li>
              <li>
                <label for="firstname">First Name</label>
-               <input type="text" id="firstname" name="user_email">
+               <input type="text" style="width: 100%;" id="firstname">
              </li>
              <li>
                <label for="lastname">Last Name:</label>
-               <input type="text" id="title" name="user_name">
+               <input type="text" style="width: 100%;" id="lastname">
              </li>
              <li>
-                <label for="Review">Review:</label>
-                <input type="text" id="title" name="user_name">
+                <label for="review">Review:</label>
+                <textarea style="width: 100%;" id="review"></textarea>
               </li>
             </ul>
            </form>
+    </div>
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
