coloring, sizing create page

--- a/public/create.html
+++ b/public/create.html
@@ -56,7 +56,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h2>Create Review<span class="member-name"></span></h2>
+                <h2><span class="member-name"></span></h2>
                 
             </div>
         </div>
@@ -78,7 +78,7 @@
              </li>
              <li>
                 <label for="review">Review:</label>
-                <textarea style="width: 100%;" id="review"></textarea>
+                <textarea  maxlength="128" style="width: 100%;" id="review"></textarea>
               </li>
             </ul>
            </form>
