--- a/public/create.html
+++ b/public/create.html
@@ -87,6 +87,14 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/members.js"></script>
+    <script>
+        var textarea = document.getElementById("review");
+var heightLimit = 200; /* Maximum height: 200px */
+textarea.oninput = function() {
+  textarea.style.height = ""; /* Reset the height*/
+  textarea.style.height = Math.min(textarea.scrollHeight, heightLimit) + "px";
+};
+    </script>
 
 </body>
 
