changed to say author's and added submit

--- a/public/create.html
+++ b/public/create.html
@@ -69,17 +69,20 @@
                <input type="text" style="width: 100%;"id="title">
              </li>
              <li>
-               <label for="firstname">First Name</label>
+               <label for="firstname"> Author's First Name:</label>
                <input type="text" style="width: 100%;" id="firstname">
              </li>
              <li>
-               <label for="lastname">Last Name:</label>
+               <label for="lastname">Author's Last Name:</label>
                <input type="text" style="width: 100%;" id="lastname">
              </li>
              <li>
                 <label for="review">Review:</label>
                 <textarea  maxlength="128" style="width: 100%;" id="review"></textarea>
               </li>
+              <l>
+                <button for="submit">Submit</button>
+               </li>
             </ul>
            </form>
     </div>
