--- a/public/login.html
+++ b/public/login.html
@@ -35,7 +35,7 @@
                     <button type="submit" class="btn btn-default">Login</button>
                 </form>
                 <br />
-                <p>Or Sign Up <a href="/">here</a></p>
+                <p>Or Sign Up <a href="/">Here</a></p>
             </div>
         </div>
     </div>
