--- a/public/create.html
+++ b/public/create.html
@@ -62,23 +62,23 @@
         </div>
     </div>
     <div class="form container">
-        <form action="/my-handling-form-page" method="post">
+        <form class="review">
             <ul>
              <li>
-               <label for="title">Title:</label>
-               <input type="text" style="width: 100%;"id="title">
+               <label for="title">Book Title:</label>
+               <input type="text" style="width: 100%;"id="book-title">
              </li>
              <li>
                <label for="firstname"> Author's First Name:</label>
-               <input type="text" style="width: 100%;" id="firstname">
+               <input type="text" style="width: 100%;" id="author-first">
              </li>
              <li>
                <label for="lastname">Author's Last Name:</label>
-               <input type="text" style="width: 100%;" id="lastname">
+               <input type="text" style="width: 100%;" id="author-last">
              </li>
              <li>
                 <label for="review">Review:</label>
-                <textarea  maxlength="128" style="width: 100%;" id="review"></textarea>
+                <textarea  maxlength="128" style="width: 100%;" id="book-review"></textarea>
               </li>
               <l>
                 <button for="submit">Submit</button>
@@ -90,6 +90,7 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/members.js"></script>
+    <script type="text/javascript" src="js/review.js"></script>
     <script>
         var textarea = document.getElementById("review");
 var heightLimit = 200; /* Maximum height: 200px */
