--- a/public/members.html
+++ b/public/members.html
@@ -7,7 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
     <link href="stylesheets/style.css" rel="stylesheet">
+    <!-- font choice ? -->
+    <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
 </head>
+
+<style>
+  body {
+    background-color: rgb(241, 205, 126);
+  }
+</style>
 
 <body>
     <nav class="navbar navbar-default">
@@ -44,7 +52,7 @@
 
         <div class="mySlides ">
           <div class="numbertext">1 / 3</div>
-          <img src="images/banner.jpg" style="width:100%">
+          <img src="../public/images/bookbsbackground2.jpg" style="width:100%">
           <div class="bookinfo">
             <div class="booktitle">The Old Man and the Sea</div>
             <div class="bookheadline">"Worst Book...Ever!"</div>
@@ -55,7 +63,7 @@
         
         <div class="mySlides ">
           <div class="numbertext">2 / 3</div>
-          <img src="images/banner.jpg" style="width:100%">
+          <img src="../public/images/bookbsbackground2.jpg" style="width:100%">
           <div class="bookinfo">
           <div class="booktitle"></div>
           <div class="bookheadline"></div>
@@ -66,7 +74,7 @@
         
         <div class="mySlides ">
           <div class="numbertext">3 / 3</div>
-          <img src="images/banner.jpg" style="width:100%">
+          <img src="../public/images/bookbsbackground2.jpg" style="width:100%">
           <div class="bookinfo">
             <div class="booktitle"></div>
             <div class="bookheadline"></div>
