--- a/public/create.html
+++ b/public/create.html
@@ -49,7 +49,7 @@
               <a class="navbar-brand logintab" href="/login">
                 Log-In
             </a>
-            <a class="navbar-brand viewtab" href="/view">
+            <a class="navbar-brand viewtab" href="/display">
               View
           </a>
           <a class="navbar-brand createtab" href="/create">
@@ -99,6 +99,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/members.js"></script>
     <script type="text/javascript" src="js/review.js"></script>
+    <script type="text/javascript" src="js/search.js"></script>
     <script>
         var textarea = document.getElementById("review");
 var heightLimit = 200; /* Maximum height: 200px */
