--- a/public/members.html
+++ b/public/members.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
 </head>
 
-<style>
+<!-- <style>
     html {
         background-image: url(../public/images/booksbackground4.jpg);
         -webkit-background-size: cover;
@@ -44,7 +44,7 @@
     .hometab {
         font-size: x-large;
     }
-</style>
+</style> -->
 
 <body>
     <nav class="navbar navbar-default">
@@ -59,7 +59,7 @@
           <a class="navbar-brand logintab" href="/login">
             Log-In
         </a>
-        <a class="navbar-brand viewtab" href="/view">
+        <a class="navbar-brand viewtab" href="/display">
           View
       </a>
       <a class="navbar-brand createtab" href="/create">
@@ -80,7 +80,7 @@
             <!-- </div>
         </div>
     </div> -->
-    <div class="slideshow-container">
+    <!-- <div class="slideshow-container">
         <div class="mySlides ">
           <div class="numbertext">1 / 3</div>
           <img src="../public/images/booksbackground4.jpg" style="width:fit-content; height: fit-content; visibility: collapse;">
@@ -114,7 +114,7 @@
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
         
-        </div>
+        </div> -->
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/members.js"></script>
