--- a/public/display.html
+++ b/public/display.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +5,35 @@
     <title>Passport Authentication</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+    <link href="stylesheets/style.css" rel="stylesheet">
+    <!-- font choice ? -->
+    <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
+</head>
 
+
+<body>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand hometab" href="/home">
+                Home
+            </a>
+            <a class="navbar-brand signuptab" href="/signup">
+              Sign-Up
+          </a>
+          <a class="navbar-brand logintab" href="/login">
+            Log-In
+        </a>
+        <a class="navbar-brand viewtab" href="/view">
+          View
+      </a>
+      <a class="navbar-brand createtab" href="/create">
+        Create
+    </a>
+    <a class="navbar-brand logouttab" href="/logout">
+      Logout
+  </a>
             </div>
         </div>
     </nav>
@@ -18,7 +45,48 @@
             </div>
         </div>
     </div>
-
+    <div class="form container">
+        <form action="/my-handling-form-page" method="post">
+            <ul>
+             <li>
+               <label for="title">Title:</label>
+               <div class="title">
+                   <!-- INSERT TITLE HERE -->
+               </div>
+             </li>
+             <li>
+               <label for="firstname">First Name</label>
+               <div class="firstname">
+                   <!-- FIRSTNAME HERE -->
+               </div>
+             </li>
+             <li>
+               <label for="lastname">Last Name:</label>
+               <div class="lastname">
+                   <!-- INSERT LASTNAME HERE -->
+               </div>
+             </li>
+             <li>
+                <label for="review">Review:</label>
+                <div class="review">
+                    <!-- INSERT REVIEW HERE -->
+                </div>
+              </li>
+              <li>
+                <label for="rating">Rating:</label>
+                <div class="rating">
+                    <!-- INSERT Rating HERE -->
+                </div>
+                <button id="upvote"></button>
+                <button id="downvote"></button>
+              </li>
+            </ul>
+           </form>
+    </div>
+    </div>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/members.js"></script>
 
 </body>
 
